# django-comments-ink

./: .eslintignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  ccsvg.sh  conftest.py  lint.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-docs.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt  setup.py  tox.ini  webpack.config.js
.github/workflows/: ci-pipeline.yml  publish.yml
demos/project-quotes/: Dockerfile  README.md  requirements.txt  setup.py
demos/project-stories/: README.md  requirements.txt
django_comments_ink/: __init__.py  admin.py  apps.py  caching.py  forms.py  models.py  moderation.py  paginator.py  partial.py  signals.py  signed.py  urls.py  utils.py  views.py
django_comments_ink/api/: __init__.py  frontend.py  serializers.py  urls.py  views.py
django_comments_ink/conf/: __init__.py  defaults.py
django_comments_ink/migrations/: 0001_initial.py
django_comments_ink/templatetags/: comments_ink.py
django_comments_ink/tests/: __init__.py  apiauth.py  apps.py  models.py  settings.py  test_api_views.py  test_caching.py  test_forms.py  test_frontend.py  test_get_version.py  test_init.py  test_models.py  test_moderation.py  test_paginator.py  test_populate_comments.py  test_reactions.py  test_serializers.py  test_signed.py  test_templatetags.py  test_utils.py  test_views.py  urls.py  utils.py
django_comments_ink/views/: base.py  commenting.py  flagging.py  muting.py  reacting.py  templates.py  (+1 more)
docs/: about.md  example.rst  extending.rst  index.md  index.rst  logic.rst  quickstart.rst  settings.rst  templates.rst  templatetags.rst  tutorial.md  tutorial.rst
js_tests/: serve_static.js
mkdocs/: index.md
(+153 files in other folders)
