[build-system]
requires = ["setuptools>=60.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
exclude = [
    "django_comments_ink/migrations",
    "django_comments_ink/tests/migrations"
]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
skip = [
    "django_comments_ink/migrations",
    "django_comments_ink/tests/migrations"
]

[tool.pytest]
addopts = "--create-db"
django_find_project = false
python_files = "test_*.py"
