[build-system]
requires = ["setuptools>=60.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
omit = [
    "django_comments_ink/admin.py"
]
exclude_lines = [
    "pragma: no cover"
]

[tool.black]
line-length = 80
extend-exclude = '''pqenv|psenv'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
src_paths = ["django_comments_xtd", "demos"]
extend_skip_glob = [
    "**/pqenv/**",
    "**/psenv/**",
]

[tool.pytest]
addopts = "--create-db"
django_find_project = false
python_files = "test_*.py"
